404 page text unselectable

--- a/css/404.css
+++ b/css/404.css
@@ -17,6 +17,13 @@ body {
 	overflow: hidden;
 }
 
+.container-title{
+	-webkit-user-select: none;  /* Chrome all / Safari all */
+	-moz-user-select: none;     /* Firefox all */
+	-ms-user-select: none;      /* IE 10+ */
+	user-select: none;          /* Likely future */
+  }
+
 .container-star {
 	background-image: linear-gradient(
 		to bottom,
