--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ body.dark-mode {
 }
 
 .masked-first-text {
-    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
+    clip-path: polygon(0% 0%, 300% 0%, 300% 100%, 0% 100%);
 }
 
 .masked-second-text {
@@ -89,19 +89,22 @@ body.dark-mode {
 }
 
 .my-name.animate .first-text {
-    animation: slide-up 1s ease-in-out forwards;
+    animation: slide-up-right 1.5s ease-in-out forwards;
 }
   
 .my-name.animate .second-text {
     animation: slide-down 1s ease-in-out forwards;
 }
 
-@keyframes slide-up {
-    from {
+@keyframes slide-up-right {
+    0% {
         transform: translateY(100%);
     }
-    to {
+    50% {
         transform: translateY(0%);
+    }
+    100% {
+        transform: translateX(62%);
     }
 }
 
