--- a/css/style.css
+++ b/css/style.css
@@ -132,13 +132,11 @@ svg {
     transform: translateX(-250px);
 }
 
-.my-photo {
-    position: fixed;
-    top: 20%;
+.photo-container {
+    position: absolute;
+    top: 130%;
     left: 20%;
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
+    z-index: -4;
 }
 
 .scroll-space {
