--- a/css/style.css
+++ b/css/style.css
@@ -64,8 +64,13 @@ body.dark-mode {
 
 @media (max-width: 767px) {
     .my-name {
-        left: 10%;
-        transform: translateX(0%)
+        left: 50%;
+        transform: translateX(-50%)
+    }
+    .my-name.animate .first-text,
+    .my-name.animate .second-text {
+        animation: none !important;
+        transform: translateY(0);
     }
 }
 
@@ -123,6 +128,7 @@ body.dark-mode {
     top: 110%;
     left: 0%;
     width: 100%;
+    height: 300%;
     z-index: -5;
     overflow: hidden;
 }
@@ -134,9 +140,22 @@ svg {
 
 .photo-container {
     position: absolute;
-    top: 130%;
+    top: 135%;
     left: 20%;
     z-index: -4;
+}
+
+@media (min-width: 1275px) {
+    .photo-container img {
+        width: 350px;
+    }
+}
+
+@media (max-width: 767px) {
+    .photo-container {
+        left: 50%;
+        transform: translateX(-50%);
+    }
 }
 
 .scroll-space {
