--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,9 @@ body.dark-mode {
     .text-to-toggle {
         color: #f0f1fa;
     }
+    .tooltip-container-github .text {
+        color: #f0f1fa;
+    }
 }
 
 .mouseTail, .theme-switch, .rotating-text, .scroll-to-explore, .my-name, .line-container, .photo-container, .my-description {
@@ -54,24 +57,6 @@ body.dark-mode {
     font-weight: 600;
     font-size: 32px;
     white-space: nowrap;
-}
-
-@media (min-width: 1275px) {
-    .my-name {
-        font-size: 72px;
-    }
-}
-
-@media (max-width: 767px) {
-    .my-name {
-        left: 50%;
-        transform: translateX(-50%)
-    }
-    .my-name.animate .first-text,
-    .my-name.animate .second-text {
-        animation: none !important;
-        transform: translateY(0);
-    }
 }
 
 .masked-first-text {
@@ -145,20 +130,6 @@ body.dark-mode {
     z-index: -4;
 }
 
-@media (min-width: 1275px) {
-    .photo-container img {
-        width: 350px;
-    }
-}
-
-@media (max-width: 767px) {
-    .photo-container {
-        left: 50%;
-        top: 125%;
-        transform: translateX(-50%);
-    }
-}
-
 .my-description {
     font-family: 'Poppins', sans-serif;
     position: absolute;
@@ -178,37 +149,6 @@ body.dark-mode {
 .my-description .keyword-sec {
     color: #3498db;
     font-weight: bold;
-}
-
-@media (min-width: 1275px) {
-    .my-description {
-        right: 8%;
-        font-size: 24px;
-    }
-}
-
-@media (min-width: 990px) and (max-width: 1275px) {
-    .my-description {
-        font-size: 20px;
-    }
-}
-
-@media (max-width: 767px) {
-    .my-description {
-        top: 150%;
-        right: 50%;
-        width: 60%;
-        transform: translateX(50%);
-    }
-}
-
-@media (max-height: 834px) {
-    .photo-container {
-        top: 130%;
-    }
-    .my-description {
-        top: 165%;
-    }
 }
 
 .scroll-space {
