menu sidebar | remove theme switch

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body.dark-mode {
     }
 }
 
-.mouseTail, .theme-switch, .rotating-text, .scroll-to-explore, .my-name, .line-container, .photo-container, .my-description {
+.mouseTail, .theme-switch, .rotating-text, .scroll-to-explore, .my-name, .line-container, .photo-container, .my-description, .overlay-toggle{
     -webkit-user-select: none;  /* Chrome all / Safari all */
     -moz-user-select: none;     /* Firefox all */
     -ms-user-select: none;      /* IE 10+ */
