--- a/css/menu.css
+++ b/css/menu.css
@@ -6,7 +6,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(255, 255, 255, 0.7);
+    background: rgba(222, 222, 222, 0.7);
     backdrop-filter: blur(5px);
     pointer-events: none;
     opacity: 0;
@@ -14,25 +14,29 @@
     transition: opacity 0.3s ease;
 }
 
+.top-nav {
+    position: fixed;
+    top: 5%;
+    right: 5%;
+    z-index: 20;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .overlay-toggle {
-    position: fixed; /* Changed from absolute to fixed */
-    top: 5%; /* Position at the top */
-    right: 5%; /* Position at the right */
     width: 120px;
     height: 40px;
     margin: 0.75em;
     padding: 0.5em;
     border-radius: 40px;
-    background-color: rgb(228, 230, 239); /* Set original background color to light grey */
+    background-color: rgb(228, 230, 239);
     color: black;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    /* border: 2px solid #ccc; */
-    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
     transition: background-color 0.3s, box-shadow 0.3s;
-    z-index: 20;
 }
 
 .overlay-toggle svg {
@@ -144,4 +148,56 @@
 .menu-card:hover .menu-card-copy {
     opacity: 1;
     transform: translateY(0px);
+}
+
+.volume {
+    width: 55px;
+    height: 55px;
+    border-radius: 100%;
+    background-color: rgb(205, 191, 247);
+    overflow: hidden;
+    position: relative;
+}
+.volume-icon {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.5s ease;
+    overflow: hidden;
+    position: relative;
+}
+.volume-input {
+    position: absolute;
+    inset: 0;
+    opacity: 0;
+    cursor: pointer;
+    z-index: 999;
+}
+.volume-icon:before {
+    content: "";
+    display: flex;
+    width: 0px;
+    height: 0px;
+    border-radius: 100%;
+    transition: all 0.2s ease;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgb(32, 33, 36);
+}
+.volume-input:checked + .volume-icon:before {
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+}
+.volume-svg {
+    z-index: 2;
+    color: rgb(32, 33, 36);
+    height: 30px;
+    width: 30px;
+}
+.volume-input:checked + .volume-icon svg {
+    color: rgb(255, 255, 255);
 }
