--- a/css/titleText.css
+++ b/css/titleText.css
@@ -3,7 +3,7 @@
 .rotating-text {
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
-    font-size: 48px;
+    font-size: 3vw;
     color: rgb(5, 5, 5);
     text-align: center;
     position: absolute;
@@ -11,13 +11,6 @@
     left: 50%;
     transform: translate(-50%, -50%);
     animation: slide-in 2s ease-in-out;
-}
-
-@media (min-width: 1805px) {
-    .rotating-text {
-        transform: translate(-60%, -50%);
-        animation: slide-in-large 2s ease-in-out;
-    }
 }
 
 @media (max-width: 767px) { 
@@ -35,17 +28,6 @@
     to {
         opacity: 1;
         transform: translate(-50%, -50%);
-    }
-}
-
-@keyframes slide-in-large {
-    from {
-        opacity: 0;
-        transform: translate(-60%, -30%);
-    }
-    to {
-        opacity: 1;
-        transform: translate(-60%, -50%);
     }
 }
 
