--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ body.dark-mode {
     bottom: 20px;
     left: 50%;
     transform: translateX(-50%);
-    font-size: 20px;
+    font-size: 1.3vw;
     animation: slide-in-scroll 2s ease-in-out;
 }
 
@@ -130,6 +130,11 @@ body.dark-mode {
     z-index: -4;
 }
 
+.photo-container img {
+    /* width: 350px; */
+    width: 20vw;
+}
+
 .my-description {
     font-family: 'Poppins', sans-serif;
     position: absolute;
@@ -138,7 +143,7 @@ body.dark-mode {
     transform: translateY(-50%);
     width: 30%;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 1.4vw;
 }
 
 .my-description .keyword {
@@ -173,6 +178,7 @@ body.dark-mode {
     z-index: 1000;
     animation: fadeOut 5s ease forwards;
     z-index: 45;
+    font-size: 1vw;
 }
 
 @keyframes fadeOut {
