--- a/css/menu.css
+++ b/css/menu.css
@@ -158,7 +158,7 @@
     width: 55px;
     height: 55px;
     border-radius: 100%;
-    background-color: rgb(205, 191, 247);
+    background-color: rgb(228, 230, 239);
     overflow: hidden;
     position: relative;
 }
@@ -171,6 +171,7 @@
     transition: all 0.5s ease;
     overflow: hidden;
     position: relative;
+    cursor: pointer;
 }
 .volume-input {
     position: absolute;
@@ -190,9 +191,9 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    background-color: rgb(32, 33, 36);
+    background-color: rgb(0, 22, 236);
 }
-.volume-input:checked + .volume-icon:before {
+.volume-icon:hover:before {
     width: calc(100% + 4px);
     height: calc(100% + 4px);
 }
@@ -201,7 +202,11 @@
     color: rgb(32, 33, 36);
     height: 30px;
     width: 30px;
+    transition: color 0.2s ease;
 }
-.volume-input:checked + .volume-icon svg {
+.volume-icon:hover svg {
     color: rgb(255, 255, 255);
+}
+.volume-svg path {
+    transition: d 0.5s ease;
 }
