--- a/css/responsive.css
+++ b/css/responsive.css
@@ -40,7 +40,13 @@
         width: 80vw;
     }
     .menu-card-title {
+        display: flex;
+        align-items: center;
+        height: 100%;
         font-size: 6vw;
+    }
+    .menu-card-copy {
+        display: none;
     }
     .photo-container {
         left: 50%;
